--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "banshee-ui",
   "description": "A mostly renderless Vue UI component and utility library.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "author": {
     "name": "Dillon Chanis",
@@ -12,7 +12,7 @@
   "module": "dist/BansheeUI.common.js",
   "unpkg": "dist/BansheeUI.umd.min.js",
   "scripts": {
-    "serve": "vue-cli-service serve --open",
+    "serve": "vue-cli-service serve playground/main.js",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test",
     "e2e": "vue-cli-service e2e",
@@ -24,15 +24,15 @@
     "vue": "^2.5.16"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.0-beta.9",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.9",
-    "@vue/cli-service": "^3.0.0-beta.9",
-    "@vue/eslint-config-standard": "^3.0.0-beta.9",
-    "@vue/test-utils": "^1.0.0-beta.10",
+    "@vue/cli-plugin-babel": "3.0.0-rc.1",
+    "@vue/cli-plugin-e2e-cypress": "3.0.0-rc.1",
+    "@vue/cli-plugin-eslint": "3.0.0-rc.1",
+    "@vue/cli-plugin-unit-jest": "3.0.0-rc.1",
+    "@vue/cli-service": "3.0.0-rc.1",
+    "@vue/eslint-config-standard": "3.0.0-rc.1",
+    "@vue/test-utils": "1.0.0-beta.18",
     "babel-core": "^7.0.0-0",
-    "babel-jest": "^22.0.4",
+    "babel-jest": "22.4.4",
     "lint-staged": "^6.0.0",
     "vue-template-compiler": "^2.5.13"
   },
