--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "serve": "vue-cli-service serve playground/main.js",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test",
+    "test": "vue-cli-service test:unit",
     "e2e": "vue-cli-service e2e",
     "lint": "vue-cli-service lint",
     "e2e:open": "vue-cli-service e2e:open",
@@ -24,17 +24,18 @@
     "vue": "^2.5.16"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.0.0-rc.1",
-    "@vue/cli-plugin-e2e-cypress": "3.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "3.0.0-rc.1",
-    "@vue/cli-plugin-unit-jest": "3.0.0-rc.1",
-    "@vue/cli-service": "3.0.0-rc.1",
-    "@vue/eslint-config-standard": "3.0.0-rc.1",
-    "@vue/test-utils": "1.0.0-beta.18",
-    "babel-core": "^7.0.0-0",
-    "babel-jest": "22.4.4",
-    "lint-staged": "^6.0.0",
-    "vue-template-compiler": "^2.5.13"
+    "@cypress/webpack-preprocessor": "^3.0.0",
+    "@vue/cli-plugin-babel": "^3.0.4",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.4",
+    "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-plugin-unit-jest": "^3.0.4",
+    "@vue/cli-service": "^3.0.4",
+    "@vue/eslint-config-standard": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.0.1",
+    "vue-template-compiler": "^2.5.17",
+    "lint-staged": "^6.0.0"
   },
   "browserslist": [
     "> 1%",
